--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.2",
     "next": "12.0.8",
+    "postcss": "^8.4.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "storyblok-js-client": "^4.2.0",
+    "tailwindcss": "^3.0.7"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
